# DoodleJump

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doxygen_config_file  main.cpp  run.sh
.circleci/: config.yml
doc/: Credits.md  doxygen_config_file
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  PhysicsEngine.cpp  PhysicsEngine.h  World.cpp  World.h  main.cpp
src/Collision/: CollisionObject.cpp  CollisionObject.h
src/Collision/PhysicsBody/: KinematicBody.cpp  PhysicsBody.h  RigidBody.cpp  StaticBody.h
src/Controller/: Game.cpp  Game.h  SFMLEntityFactory.cpp  SFMLEntityFactory.h  SFMLWindowManager.h  main.cpp
src/Entity/: Entity.h  Player.cpp  Player.h
src/Entity/Platform/: KinematicPlatform.h
src/Game/: Game.cpp  Game.h
src/Game/AbstractEntityFactory/: AbstractEntityFactory.cpp  AbstractEntityFactory.h
src/Game/GameObject/: GameObject.cpp  GameObject.h
src/Game/GameObject/Collision/: CollisionObject.cpp  CollisionObject.h
src/Game/GameObject/Collision/PhysicsBody/: KinematicBody.cpp  KinematicBody.h  PhysicsBody.cpp  PhysicsBody.h  RigidBody.h  StaticBody.cpp  StaticBody.h
src/Game/GameObject/Entity/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/Game/GameObject/Entity/BGTile/: BGTile.cpp  BGTile.h
src/Game/GameObject/Entity/Bonus/: Bonus.cpp  Bonus.h  Jetpack.cpp  Jetpack.h  Spring.cpp  Spring.h
src/Game/GameObject/Entity/Platform/: HorizontalPlatform.h  KinematicPlatform.cpp  KinematicPlatform.h  Platform.cpp  Platform.h  StaticPlatform.cpp  StaticPlatform.h  TemporaryPlatform.cpp  TemporaryPlatform.h  VerticalPlatform.cpp  VerticalPlatform.h
src/Game/GameObject/Entity/Player/: Player.cpp  Player.h
src/Game/GameObject/View/: EntityView.h  View.cpp  View.h
src/Game/GameObject/View/AbstractEntityFactory/: AbstractEntityFactory.h
src/Game/GameObject/View/AbstractEntityFactory/SFMLEntityFactory/: StandardEntityFactory.cpp  StandardEntityFactory.h
src/Game/GameObject/View/EntityView/: EntityView.cpp  EntityView.h
src/Game/GameObject/View/ResourceManager/: ResourceManager.h
src/Game/GameObject/View/Window/: SFMLWindowManager.cpp  WindowManager.h
src/Game/World/: Camera.cpp  Camera.h  CollisionInfo.h  PhysicsEngine.cpp  PhysicsEngine.h  Scoreboard.cpp  Scoreboard.h  Spawner.cpp  Spawner.h  World.cpp  World.h
src/Model/AbstractEntityFactory/: AbstractEntityFactory.h
src/Model/GameObject/: GameObject.h
src/Model/GameObject/Collision/: CollisionObject.h
src/Model/GameObject/Entity/: Entity.h
src/Model/GameObject/Entity/BGTile/: BGTile.h
src/Model/GameObject/Entity/Bonus/: Bonus.cpp  Bonus.h  Jetpack.cpp  Jetpack.h  Spring.cpp  Spring.h
src/Model/GameObject/Entity/Platform/: HorizontalPlatform.cpp  HorizontalPlatform.h  Platform.cpp  Platform.h  StaticPlatform.cpp  StaticPlatform.h  TemporaryPlatform.cpp  TemporaryPlatform.h  VerticalPlatform.cpp  VerticalPlatform.h
src/Model/GameObject/Entity/Player/: Player.h
src/Model/World/: Camera.cpp  CollisionInfo.h  Event.h  Scoreboard.h  World.cpp  World.h
src/Utility/: Camera.cpp  Camera.h  Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  Utility.cpp  Utility.h
src/View/: resources.h
src/View/AbstractEntityFactory/: AbstractEntityFactory.cpp  AbstractEntityFactory.h
src/View/AbstractEntityFactory/SFMLEntityFactory/: SFMLEntityFactory.cpp  SFMLEntityFactory.h
src/View/ConcreteEntityFactory/: SFMLEntityFactory.h
src/View/EntityView/: DerivedEntityViews.h  EntityView.cpp  EntityView.h  TemplateView.cpp  TemplateView.h
src/View/EntityView/PlatformView/: StaticPlatformView.cpp  StaticPlatformView.h
src/View/EntityView/PlayerView/: PlayerView.cpp  PlayerView.h
src/View/ResourceManager/: ResourceManager.h
src/View/Window/: SFMLWindowManager.cpp  SFMLWindowManager.h  WindowManager.h
